# greenference

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
protocol/: pyproject.toml
protocol/src/greencompute_protocol/: __init__.py  models.py
protocol/src/greenference_protocol/: __init__.py  auth.py  billing_rates.py  enums.py  http_client.py  models.py
sdk/: pyproject.toml
sdk/src/greenference/: __init__.py  cli.py  client.py  config.py  image.py  loader.py  packaging.py  templates.py  workload.py  workloads.py
sdk/src/greenference_sdk/: __init__.py  cli.py  client.py
tests/: conftest.py
tests/integration/: test_cli_flow.py
tests/unit/: test_auth.py  test_sdk_dsl.py
