[project]
name = "greenference-repo"
version = "0.1.0"
description = "Greenference shared protocol and SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "protocol",
  "sdk",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]

