[project]
name = "greenference-protocol"
version = "0.1.0"
description = "Shared protocol models and signing helpers for Greenference"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference_protocol"]

