[project]
name = "greenference-sdk"
version = "0.1.0"
description = "Greenference Python SDK and CLI"
requires-python = ">=3.12"
dependencies = [
  "greenference-protocol",
]

[project.scripts]
greenference = "greenference_sdk.cli:main"

[tool.uv.sources]
greenference-protocol = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference_sdk"]

