[project]
name = "greenference-sdk"
version = "0.1.0"
description = "Greenference Python SDK and CLI"
requires-python = ">=3.12"
dependencies = [
  "greenference-protocol",
  "typer>=0.12,<1.0",
  "rich>=13.0,<15.0",
]

[project.optional-dependencies]
workload-templates = ["chutes>=0.5.5"]

[project.scripts]
greenference = "greenference.cli:main"

[tool.uv.sources]
greenference-protocol = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference"]

